fix the image zoom alignment of product detail page in arabic v

--- a/skin/frontend/creo/default/style-ar.css
+++ b/skin/frontend/creo/default/style-ar.css
@@ -181,6 +181,9 @@ direction: rtl;
 .category_top_filters .sort-by label {
     margin: 0 0 0 5px;
 }
+.cloud-zoom-big {
+    left: -375px !important;
+}
 @media only screen and (max-width: 1199px){
 
 }
